--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/mbaran3/CS3712_GroupProject#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "ejs-lint": "^2.0.0",
     "express": "^4.19.2",
@@ -31,4 +32,3 @@
     "passport-local": "^1.0.0"
   }
 }
-
